feat: Update application name and branding
Renames the application from "VTR Choque PMPB" to "SIVA - Alerta BPCHOQUE" across the project. This includes updating the package.json name, the HTML title, the metadata description, and various UI elements.

Also includes a minor enhancement to the error handling for Firebase permissions in `App.tsx` and a confirmation step for adding new vehicles in `AddVehicleModal.tsx`.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vtr-choque-pmpb",
+  "name": "siva---alerta-bpchoque",
   "private": true,
   "version": "0.0.0",
   "type": "module",
